<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddItemActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inventoryNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="InventoryNumber" />

            <EditText
                android:id="@+id/inventaryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/device_name"
                android:inputType="text"
                android:text="InventaryName" />

            <EditText
                android:id="@+id/serialNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/serial_number"
                android:inputType="text"
                android:text="SerialNumber" />

            <EditText
                android:id="@+id/partName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/part_name"
                android:inputType="text"
                android:text="partName" />

            <EditText
                android:id="@+id/partValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/part_value"
                android:inputType="text"
                android:text="Part value" />

            <EditText
                android:id="@+id/addedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/buy_date"
                android:inputType="date"
                android:text="addedDate" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:text="price" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="number"
                android:text="amount" />

            <Spinner
                android:id="@+id/person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/location"
                android:inputType="text"
                android:text="room" />

            <EditText
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/comments"
                android:inputType="textMultiLine"
                android:text="comments" />

            <Spinner
                android:id="@+id/section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_item_button_text" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
